<resources>
    <string name="app_name">CleanNotes</string>
    <string name="my_notes">My notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="empty_title_note">Note title can\'t be empty</string>
    <string name="empty_note">Note can\'t be empty</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick a color</string>
    <string name="add_image">Add image</string>
    <string name="permision_denied">Permission Denied!</string>
    <string name="add_link_or_website">Add link or website</string>
    <string name="add_url_or_website">Add URL or website</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="valid_url">Enter valid URL</string>
    <string name="delete_note">Delete note</string>
    <string name="delete">DELETE</string>
    <string name="sure_delete">Are you sure you want to delete this note?</string>
    <string name="at_date">at</string>
    <string name="deleted_note">Note deleted!</string>
</resources>